--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -83,3 +83,16 @@
   tags: >
     <span class="badge badge-info">#meme</span>
     <span class="badge badge-success">#hangul</span>
+    
+- name: Savings that your accounts don't know 💰
+  id: p7
+  main_link: /
+  img_src: /assets/img/jjalang.png
+  description_less: >
+    <p> An Andrioid/iOS App to keep track of your savings that you might have forgotten </p>
+  description_more: >
+    <a href="https://play.google.com/store/apps/details?id=io.jjalang.chagok" target="_blank" class="btn btn-dark mb-1"><i class="fas fa-align-right"></i> &nbsp Android </a>
+    <a href="https://apps.apple.com/kr/app/%EC%A7%A4%EB%9E%91%EC%B0%A8%EA%B3%A1/id1582412627" target="_blank" class="btn btn-dark mb-1"><i class="fas fa-align-right"></i> &nbsp iOS </a>
+  tags: >
+    <span class="badge badge-info">#mobile</span>
+    <span class="badge badge-success">#app</span>
