--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -65,8 +65,8 @@
   description_less: >
     <p> Generate slogans with a given keyword and its sound-alike partner </p>
   description_more: >
-    <a href="https://github.com/yeounyi/GenerateSlogan" target="_blank" class="btn btn-dark mb-1"><i class="fas fa-code-branch"></i> &nbsp Repository</a>
-    <a href="https://yeounyi.github.io/2021/02/23/model.html" target="_blank" class="btn btn-dark mb-1"><i class="fas fa-align-right"></i> &nbsp Blog Post</a>
+    <a href="https://github.com/yeounyi/LexPOS" target="_blank" class="btn btn-dark mb-1"><i class="fas fa-code-branch"></i> &nbsp Repository</a>
+    <a href="https://yeounyi.github.io/2021/05/08/model.html" target="_blank" class="btn btn-dark mb-1"><i class="fas fa-align-right"></i> &nbsp Blog Post</a>
   tags: >
     <span class="badge badge-info">#advertising</span>
     <span class="badge badge-success">#marketing</span>
